Fixes horizontal alignemnts overall

--- a/atoms/default/client/css/_base.scss
+++ b/atoms/default/client/css/_base.scss
@@ -1,17 +1,17 @@
 .working-report__wrapper {
   background-color: #fff;
   @include mq(tablet) {
-    width: 700px;
+    width: 740px;
     margin: 0 auto;
   }
   @include mq(desktop) {
-    width: 940px;
+    width: 980px;
   }
   @include mq(leftCol) {
-    width: 1100px;
+    width: 1140px;
   }
   @include mq(wide) {
-    width: 1260px;
+    width: 1300px;
   }
 }
 // figure.element:first-child {
